--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "langchain": "^0.3.29",
     "lucide-react": "^0.526.0",
     "matter-js": "^0.20.0",
-    "next": "15.3.2",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
     "ogl": "^1.0.11",
     "ollama": "^0.5.16",
     "radix-ui": "^1.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "react-responsive": "^10.0.1",
     "rehype-katex": "^7.0.1",
