--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 ﻿{
   "installCommand": "npm install",
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs"
+  "outputDirectory": ".next"
 }
