--- a/package.json
+++ b/package.json
@@ -1,16 +1,78 @@
 {
-  "scripts":{
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint",
-  "ingest": "bun run src/scripts/ingest.ts"
-},
-"dependencies": {
-  "next": "^15.5.9",
-  "react": "^19.2.3",
-  "react-dom": "^19.2.3"
+  "name": "personal-portfolio-2025",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "ingest": "bun run src/scripts/ingest.ts"
+  },
+  "dependencies": {
+    "@ai-sdk/cohere": "^1.2.10",
+    "@ai-sdk/groq": "^1.2.9",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/xai": "^1.2.16",
+    "@gsap/react": "^2.1.2",
+    "@icons-pack/react-simple-icons": "^13.7.0",
+    "@langchain/community": "^0.3.48",
+    "@langchain/core": "^0.3.62",
+    "@langchain/langgraph": "^0.3.6",
+    "@langchain/ollama": "^0.2.3",
+    "@langchain/openai": "^0.5.18",
+    "@langchain/textsplitters": "^0.1.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@shikijs/transformers": "^3.8.1",
+    "@studio-freight/react-lenis": "^0.0.47",
+    "@supabase/supabase-js": "^2.50.3",
+    "@types/nodemailer": "^6.4.17",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "ai": "^4.3.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dicons": "^1.1.7",
+    "framer-motion": "^12.15.0",
+    "gsap": "^3.13.0",
+    "katex": "^0.16.22",
+    "langchain": "^0.3.29",
+    "lucide-react": "^0.526.0",
+    "matter-js": "^0.20.0",
+    "next": "^15.5.9",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.3",
+    "ogl": "^1.0.11",
+    "ollama": "^0.5.16",
+    "radix-ui": "^1.4.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
+    "react-responsive": "^10.0.1",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "shadcn": "^2.5.0",
+    "shiki": "^3.8.1",
+    "tailwind-merge": "^3.3.0",
+    "use-stick-to-bottom": "^1.1.1",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/matter-js": "^0.19.8",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.0",
+    "typescript": "^5"
+  }
 }
-}
-
-
